home section with styling done

--- a/src/app/style/layout/home.scss
+++ b/src/app/style/layout/home.scss
@@ -33,10 +33,9 @@
     border-radius: 2rem;
 
     img {
-        scale: 1.2;
+        scale: 1.1;
         position: absolute;
-        height: 20rem;
-        left: -80px;
+        margin: auto;
         filter: saturate(0);
     }
 }
