--- a/src/app/style/layout/projects.scss
+++ b/src/app/style/layout/projects.scss
@@ -17,6 +17,7 @@
     .item-header {
         display: flex;
         justify-content: flex-start;
+        align-items: center;
         gap: 1rem;
         cursor: pointer;
         padding: 10px;
@@ -67,12 +68,11 @@
 }
 
 .collapseIcon {
-    transform: rotate(180deg);
     transition: 0.2s ease-in-out;
 }
 
 .list-item.active .collapseIcon {
-    transform: rotate(0deg);
+    transform: rotate(180deg);
 }
 
 .pagelet {
