--- a/src/app/style/layout/footer.scss
+++ b/src/app/style/layout/footer.scss
@@ -2,6 +2,7 @@ footer {
     background-color: black;
     color: white;
     display: flex;
+    justify-content: center;
 
     a:hover {
         text-decoration: underline;
@@ -19,17 +20,37 @@ footer {
         }
 
     }
+
+    .footer-gato {
+        height: 100%;
+        width: 100%;
+        max-width: 400px;
+    }
+
+    .footer-container {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        max-width: 1400px;
+        align-items: center;
+        padding: 3rem;
+        padding-top: 4rem;
+    }
 }
 
 #footer-content {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    padding: 3rem;
-    padding-top: 4rem;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: start;
-    max-width: 1400px;
-    width: 100%;
-    margin: auto;
+    width: fit-content;
+}
+
+@media screen and (max-width: 768px) {
+    footer {
+        .footer-container {
+            flex-direction: column;
+        }
+    }
 }
