--- a/src/app/style/layout/about.scss
+++ b/src/app/style/layout/about.scss
@@ -97,6 +97,7 @@
 .myself-info {
     display: flex;
     gap: 1rem;
+    align-items: center;
 
     svg {
         width: 1rem;
@@ -110,13 +111,13 @@
     gap: 1rem;
 }
 
-.edu-section,
-.education-container {
+.edu-list-item,
+.education-list {
     display: flex;
     flex-direction: column;
     gap: 1rem;
 
-    &.education-container {
+    &.education-list {
         gap: 3rem;
     }
 }
