--- a/src/app/style/layout/footer.scss
+++ b/src/app/style/layout/footer.scss
@@ -43,7 +43,7 @@ footer {
     flex-direction: column;
     gap: 1rem;
     justify-content: flex-start;
-    align-items: start;
+    align-items: flex-start;
     width: fit-content;
 }
 
