add moving eyes

--- a/src/app/style/layout/home.scss
+++ b/src/app/style/layout/home.scss
@@ -31,6 +31,7 @@
     width: 20rem;
     height: 20rem;
     border-radius: 2rem;
+    border: solid black 6px;
 
     img {
         scale: 1.1;
@@ -39,6 +40,23 @@
         filter: saturate(0);
         height: 100%;
     }
+}
+
+#eyes {
+    position: absolute;
+}
+
+.eye {
+    width: 34px;
+    height: 34px;
+    position: absolute;
+}
+
+.pupil {
+    width: 20px;
+    height: 20px;
+    border-radius: 10px;
+    background-color: black;
 }
 
 @media screen and (max-width: 768px) {
